--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 # Core LangChain
-langchain>=0.1.0,<0.3.0
-langchain-core>=0.1.7,<0.3.0
-langchain-community>=0.0.20,<0.3.0
-langchain-openai>=0.0.5,<0.2.0
+langchain==0.1.0
+langchain-core==0.1.0
+langchain-community==0.0.20
+langchain-openai==0.0.5
 
 # OpenAI
-openai>=1.12.0
+openai==1.12.0
 
 # Search & Web Tools
 tavily-python==0.3.3
 beautifulsoup4==4.12.3
 lxml==5.1.0
 html2text==2024.2.26
+
+# Vector Store & Embeddings (RAG용)
+faiss-cpu==1.7.4
+tiktoken==0.5.2
 
 # Data Models
 pydantic==2.6.1
