--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,29 @@
 # Core LangChain
-langchain==0.1.0
-langchain-core==0.1.0
-langchain-community==0.0.20
-langchain-openai==0.0.5
+langchain>=0.1.0,<0.2
+langchain-community>=0.0.20
+langchain-openai>=0.0.5
 
 # OpenAI
-openai==1.12.0
+openai>=1.12.0
 
 # Search & Web Tools
-tavily-python==0.3.3
-beautifulsoup4==4.12.3
-lxml==5.1.0
-html2text==2024.2.26
+tavily-python>=0.3.3
+beautifulsoup4>=4.12.3
+lxml>=5.1.0
+html2text>=2024.2.26
 
-# Vector Store & Embeddings (RAG용)
-faiss-cpu==1.7.4
-tiktoken==0.5.2
+# Vector Store & Embeddings
+faiss-cpu>=1.7.4
+tiktoken>=0.5.2
 
 # Data Models
-pydantic==2.6.1
-pydantic-settings==2.1.0
+pydantic>=2.6.1
+pydantic-settings>=2.1.0
 
 # Async & HTTP
-aiohttp==3.9.3
-httpx==0.26.0
-requests==2.31.0
+aiohttp>=3.9.3
+httpx>=0.26.0
+requests>=2.31.0
 
 # Utilities
-python-dotenv==1.0.1
+python-dotenv>=1.0.1
