--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain>=0.1.0,<0.2
 langchain-community>=0.0.20
 langchain-openai>=0.0.5
+langgraph>=0.0.20
 
 # OpenAI
 openai>=1.12.0
@@ -27,3 +28,10 @@ requests>=2.31.0
 
 # Utilities
 python-dotenv>=1.0.1
+
+# Finance Data
+finance-datareader>=0.9.55
+
+# Data Analysis
+pandas>=2.2.0
+numpy>=1.26.3
